2008-12-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 558306 – Cannot build gdk (gtk+ 2.14.4) on Solaris 8

	* gdk/x11/gdktestutils-x11.c (gdk_test_simulate_button):
	Remove a C99ism. Pointed out by Eric Lamarque

2008-12-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 549251 – GTK icon view accessible issue.

	* gtk/gtkiconview.c (gtk_icon_view_accessible_model_row_changed):
	Handle separate append/set for rows.  Patch by Li Yuan

2008-12-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 556839 – Crash when opening a link

	* gtk/gtkstatusicon.c (gtk_status_icon_finalize): Destroy the
	image too. Patch by Carlos Garcia Campos

2008-12-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 563751 – xatom cache is prefilled too late

	* gdk/x11/gdkdisplay-x11.c (gdk_display_open): Initialize the
	XAtom cache earlier. Patch by Christian Persch

2008-12-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 564212 – gtk_icon_view_accessible_model_rows_reordered explain 
	new_order in the wrong way

	* gtk/gtkiconview.c (gtk_icon_view_accessible_model_rows_reordered):
	Use the new order correctly.  Patch by Li Yuan

2008-12-13  Matthias Clasen  <mclasen@redhat.com>

	Bug 563835 – Typo in gtk_widget_has_screen() docs

	* gdk/directfb/gdkwindow-directfb.c:
	* gdk/gdkwindow.c:
	* gdk/x11/gdkwindow-x11.c:
	* gtk/gtkmenushell.c:
	* gtk/gtkwidget.c:
	* gtk/tests/builder.c:
	* tests/testdnd.c: s/heirarchy/hierarchy/ in docs and comments.
	Pointed out by Wouter Bolsterlee

2008-12-12  Matthias Clasen  <mclasen@redhat.com>

	Bug 564066 – Crash in gtk_rc_parse_default_files

	* gtk/gtkrc.c (gtk_rc_parse_default_files): Handle being called
	early. Bug report by Andrés G. Aragoneses

2008-12-12  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmountoperation.c: Set an empty title on password dialogs.
	Pointed out by Máirín Duffy.

2008-12-11  Sven Herzberg  <sven@imendio.com>

	Document the "set-scroll-adjustments" signal

	Reviewed by Kristian Rietveld.

	* gtk/gtkiconview.c,